--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Access2.me: The End of Spam As We Know It</title>
+		<title>Access2.ME: The End of Spam As We Know It</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<noscript>
@@ -20,10 +20,10 @@
 
 		<!-- Header -->
 			<div id="header">
-				<h1>Access2.me</h1>
+				<h1>Access2.ME</h1>
 				<span class="logo icon fa-paper-plane-o"></span>
 				<h2>The End of Spam As We Know It</h2>
-				<p>Access2.me connects you with the people who matter, and blocks the people who don't.</p>
+				<p>Access2.ME connects you with the people who matter, and blocks the people who don't.</p>
 			</div>
 
 		<!-- Main -->
@@ -45,14 +45,14 @@
 					<section class="feature left">
 						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Sift Through the Noise</h3>
-							<p>You're a busy person, innundated with connection requests and emails from unknown sources. How do you efficiently decide who is worth your valuable time and who is not?</p>
+							<h3>Sift Through The Noise</h3>
+							<p>You're a busy person, innundated with countless emails from unknown sources. How do you efficiently decide who is worth your valuable time and who is not?</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>Define Specific Filters</h3>
+							<h3>Define Specific Criteria</h3>
 							<p>Maybe you only want to speak with individuals with whom you share a common connection. Or perhaps you only want to hear from luminaries in specific industries. You decide, and we deliver.</p>
 						</div>
 					</section>
@@ -60,18 +60,18 @@
 						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Get Context At a Glance</h3>
-							<p>With every email Access2.me delivers, we add contextual information about the person trying to reach you, including who they are, how they are connected, and why they potentially matter to you.</p>
+							<p>With every email Access2.ME refers, we add contextual information about the person trying to reach you, including who they are, how they are connected to you, and why they matter.</p>
 						</div>
 					</section>
 				</div>
 
 				<footer class="major container small">
 					<h3>We are currently accepting beta testers</h3>
-					<p>Access2.me is a simple idea with an elegant implementation. In order to ensure that we are providing
-                  the right product to solve the correct market pain, we have opened a limited, invite-only beta period.
+					<p>Access2.ME is a simple idea with an elegant implementation. In order to ensure we are providing
+                  the right product to solve the correct market problem, we have opened a limited, invite-only beta period.
                   Apply for our beta program to see if you qualify. An invite will be sent on a space-available basis.</p>
 					<ul class="actions">
-						<li><a href="#signup" class="button">Request a Beta Invite</a></li>
+						<li><a href="#signup" class="button">Request a Beta Invite!</a></li>
 					</ul>
 				</footer>
 
@@ -89,10 +89,10 @@
 					<p>Please fill out the form below to request to be included in our beta program. Space is limited, and
                   spots will be opened on a first-come first-serve basis to qualified individuals.</p>
 
-					<form method="post" action="#">
+					<form method="post" action="mailchimp/AddSubscriber.php">
 						<div class="row collapse-at-2">
 							<div class="6u">
-								<input type="text" name="name" placeholder="Name (Required)" />
+								<input type="text" name="fname" placeholder="First Name (Required)" />
 							</div>
 							<div class="6u">
 								<input type="email" name="email" placeholder="Email (Required)" />
@@ -118,7 +118,7 @@
 					</ul>
 					
 					<ul class="copyright">
-						<li>&copy; Access2.me. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Access2.ME. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 			
 				</div>
